# manv

./: .gitignore  DEBUGGING.md  README.md  main.mv  pyproject.toml
manv/: __init__.py  abi.py  ast.py  builder.py  cli.py  compiled_runtime.py  compiler.py  cpu_codegen.py  dap.py  debug_engine.py  debug_mapping.py  diagnostics.py  gpu_backends.py  gpu_dispatch.py  gpu_execution.py  gpu_trace.py  graph_capture.py  graph_ir.py  graph_opt.py  hir.py  hlir.py  hlir_interpreter.py  hlir_lowering.py  host_stub.py  interpreter.py  intrinsics.py  kernel_ir.py  kernel_mock.py  kir_verify.py  lexer.py  llvm_codegen.py  llvm_ir.py  llvm_toolchain.py  lowering.py  lsp_server.py  native_toolchain.py  object_runtime.py  parser.py  project.py  registry.py  (+9 more)
manv/backends/: __init__.py  cuda_ptx.py
manv/device/: __init__.py  dynamic_loader.py  interfaces.py  reporting.py  resolver.py
manv/host/: __init__.py  interfaces.py  reporting.py  resolver.py
manv/packaging/: __init__.py  bootstrap.py  bundle_writer.py  manifest.py
manv/stdlib/: array.py  (+43 more)
std/: README.md  project.toml
tests/: test_abi_runtime.py  test_cuda_runtime.py  test_dap_debugger.py  test_device_resolver.py  test_gpu_decorator_frontend.py  test_gpu_multi_backend.py  test_help_builtin.py  test_hlir_eh.py  test_host_resolver.py  test_intrinsics_runtime.py  test_kernelization_gating.py  test_llvm_codegen.py  test_lsp_server.py  test_math_docstrings.py  test_no_foreign_runtime_policy.py  test_oop_accessors.py  test_oop_exceptions_runtime.py  test_repl_features.py  test_static_method_decorator.py  test_syscall_keyword.py
(+97 files in other folders)
